// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`covid data All covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measures": Array [
        Object {
          "covid_commitments": Array [
            Object {
              "commitment": 1,
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
            },
            Object {
              "commitment": 4,
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
            },
            Object {
              "commitment": 6,
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
            },
          ],
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 0,
              "vote": 999,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 0,
              "vote": 9,
            },
          ],
          "covid_expenditures": Array [
            Object {
              "fiscal_year": "2020",
              "is_budgetary": false,
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 0,
              "vote": 1,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 1,
              "vote": 2,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
              "stat": 0,
              "vote": 4,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": false,
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 4,
              "vote": 0,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 5,
              "vote": 0,
            },
          ],
          "covid_funding": Array [
            Object {
              "fiscal_year": "2020",
              "funding": 1,
            },
            Object {
              "fiscal_year": "2020",
              "funding": 4,
            },
          ],
          "has_covid_data": Object {
            "has_commitments": true,
            "has_estimates": true,
            "has_expenditures": true,
          },
          "id": "COV001",
          "in_estimates": true,
          "name": "measure 1",
        },
        Object {
          "covid_commitments": Array [
            Object {
              "commitment": 2,
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
            },
            Object {
              "commitment": 7,
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
            },
            Object {
              "commitment": 8,
              "fiscal_year": "2021",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
            },
          ],
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 8,
              "vote": 99,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 99,
              "vote": 99,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 9,
              "vote": 0,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2021",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 9,
              "vote": 0,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2020",
              "org": Object {
                "id": "1",
                "name": "Agriculture and Agri-Food Canada",
              },
              "org_id": "1",
              "stat": 9,
              "vote": 0,
            },
          ],
          "covid_expenditures": Array [
            Object {
              "fiscal_year": "2020",
              "is_budgetary": false,
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 2,
              "vote": 3,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 6,
              "vote": 6,
            },
            Object {
              "fiscal_year": "2021",
              "is_budgetary": true,
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": "552",
              "stat": 7,
              "vote": 7,
            },
          ],
          "covid_funding": Array [
            Object {
              "fiscal_year": "2020",
              "funding": 8,
            },
            Object {
              "fiscal_year": "2021",
              "funding": 8,
            },
          ],
          "has_covid_data": Object {
            "has_commitments": true,
            "has_estimates": true,
            "has_expenditures": true,
          },
          "id": "COV002",
          "in_estimates": false,
          "name": "measure 2",
        },
        Object {
          "covid_commitments": Array [
            Object {
              "commitment": 3,
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
            },
            Object {
              "commitment": 5,
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
            },
          ],
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
              "stat": 9,
              "vote": 99,
            },
          ],
          "covid_expenditures": Array [
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": "133",
              "stat": 3,
              "vote": 0,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": "326",
              "stat": 0,
              "vote": 5,
            },
          ],
          "covid_funding": Array [
            Object {
              "fiscal_year": "2020",
              "funding": 3,
            },
            Object {
              "fiscal_year": "2021",
              "funding": 3,
            },
          ],
          "has_covid_data": Object {
            "has_commitments": true,
            "has_estimates": true,
            "has_expenditures": true,
          },
          "id": "COV003",
          "in_estimates": true,
          "name": "measure 3",
        },
      ],
    },
  },
}
`;

exports[`covid data Gov covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "covid_funding": Array [
          Object {
            "fiscal_year": "2020",
            "funding": 16,
          },
          Object {
            "fiscal_year": "2021",
            "funding": 11,
          },
        ],
        "covid_summary": Object {
          "covid_commitments": Array [
            Object {
              "commitment": 28,
              "fiscal_year": "2020",
            },
            Object {
              "commitment": 8,
              "fiscal_year": "2021",
            },
          ],
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "stat": 1007,
              "vote": 1107,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "stat": 108,
              "vote": 207,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "stat": 18,
              "vote": 27,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2020",
              "stat": 18,
              "vote": 0,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "stat": 999,
              "vote": 9,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2021",
              "stat": 9,
              "vote": 0,
            },
          ],
          "covid_expenditures": Array [
            Object {
              "fiscal_year": "2020",
              "is_budgetary": false,
              "stat": 6,
              "vote": 4,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "stat": 15,
              "vote": 17,
            },
            Object {
              "fiscal_year": "2021",
              "is_budgetary": true,
              "stat": 7,
              "vote": 7,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`covid data Org covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_summary": Object {
          "covid_commitments": Array [
            Object {
              "commitment": 6,
              "fiscal_year": "2020",
            },
          ],
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "stat": 8,
              "vote": 1107,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "stat": 0,
              "vote": 9,
            },
          ],
          "covid_expenditures": Array [
            Object {
              "fiscal_year": "2020",
              "is_budgetary": false,
              "stat": 2,
              "vote": 4,
            },
            Object {
              "fiscal_year": "2020",
              "is_budgetary": true,
              "stat": 4,
              "vote": 2,
            },
          ],
        },
        "name": "National Defence",
        "org_id": "133",
      },
    },
  },
}
`;

exports[`covid data Org covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_measures": Array [
          Object {
            "covid_commitments": Array [
              Object {
                "commitment": 1,
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
              },
            ],
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 0,
                "vote": 999,
              },
              Object {
                "est_doc": "SEA",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "SEB",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 9,
                "vote": 9,
              },
            ],
            "covid_expenditures": Array [
              Object {
                "fiscal_year": "2020",
                "is_budgetary": false,
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 0,
                "vote": 1,
              },
              Object {
                "fiscal_year": "2020",
                "is_budgetary": true,
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 1,
                "vote": 2,
              },
            ],
            "covid_funding": Array [
              Object {
                "fiscal_year": "2020",
                "funding": 1,
              },
              Object {
                "fiscal_year": "2020",
                "funding": 4,
              },
            ],
            "has_covid_data": Object {
              "has_commitments": true,
              "has_estimates": true,
              "has_expenditures": true,
            },
            "id": "COV001",
            "in_estimates": true,
            "name": "measure 1",
          },
          Object {
            "covid_commitments": Array [
              Object {
                "commitment": 2,
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
              },
            ],
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 8,
                "vote": 99,
              },
            ],
            "covid_expenditures": Array [
              Object {
                "fiscal_year": "2020",
                "is_budgetary": false,
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 2,
                "vote": 3,
              },
            ],
            "covid_funding": Array [
              Object {
                "fiscal_year": "2020",
                "funding": 8,
              },
              Object {
                "fiscal_year": "2021",
                "funding": 8,
              },
            ],
            "has_covid_data": Object {
              "has_commitments": true,
              "has_estimates": true,
              "has_expenditures": true,
            },
            "id": "COV002",
            "in_estimates": false,
            "name": "measure 2",
          },
          Object {
            "covid_commitments": Array [
              Object {
                "commitment": 3,
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
              },
            ],
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "ME",
                "fiscal_year": "2021",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 0,
                "vote": 9,
              },
            ],
            "covid_expenditures": Array [
              Object {
                "fiscal_year": "2020",
                "is_budgetary": true,
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": "133",
                "stat": 3,
                "vote": 0,
              },
            ],
            "covid_funding": Array [
              Object {
                "fiscal_year": "2020",
                "funding": 3,
              },
              Object {
                "fiscal_year": "2021",
                "funding": 3,
              },
            ],
            "has_covid_data": Object {
              "has_commitments": true,
              "has_estimates": true,
              "has_expenditures": true,
            },
            "id": "COV003",
            "in_estimates": true,
            "name": "measure 3",
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org has covid data 1`] = `
Object {
  "data": Object {
    "root": Object {
      "does_not_have_data": Object {
        "has_covid_data": Object {
          "has_commitments": false,
          "has_estimates": false,
          "has_expenditures": false,
        },
      },
      "has_data": Object {
        "has_covid_data": Object {
          "has_commitments": true,
          "has_estimates": true,
          "has_expenditures": true,
        },
      },
      "only_has_estimates": Object {
        "has_covid_data": Object {
          "has_commitments": false,
          "has_estimates": true,
          "has_expenditures": false,
        },
      },
    },
  },
}
`;

exports[`covid data Specific covid measure 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measure": Object {
        "covid_funding": Array [
          Object {
            "fiscal_year": "2020",
            "funding": 1,
          },
          Object {
            "fiscal_year": "2020",
            "funding": 4,
          },
        ],
        "has_covid_data": Object {
          "has_commitments": true,
          "has_estimates": true,
          "has_expenditures": true,
        },
        "id": "COV001",
        "in_estimates": true,
        "name": "measure 1",
      },
    },
  },
}
`;
